Update some docs in prep for RC 1 release
git-svn-id: https://svn.shibboleth.net/java-openws/trunk@165 68e08561-3e15-0410-b96d-d18bf8373583

--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -1,4 +1,4 @@
-OpenWS-J version 1.0 Trunk
+OpenWS-J version 1.0 - Release Candidate 1
 =============================================
 
 The OpenWS library provides a growing set of tools to work with web services at 
@@ -21,5 +21,5 @@ http://www.opensaml.org/index.html#mailing
 Issues, Suggestions
 --------
 Issues or suggestions for improvement may submitted to the OpenWS - Java
-projact at:
+project at:
 http://bugs.internet2.edu
