Prep for 1.1.0 release
git-svn-id: https://svn.shibboleth.net/java-openws/branches/REL_1@248 68e08561-3e15-0410-b96d-d18bf8373583

--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -1,4 +1,4 @@
-OpenWS-J Trunk
+OpenWS-J 2.1.0
 =============================================
 
 The OpenWS library provides a growing set of tools to work with web services at 
