Add file: URI constructors; should help deal with things like spaces in files, etc.
git-svn-id: https://svn.shibboleth.net/java-openws/branches/REL_1@257 68e08561-3e15-0410-b96d-d18bf8373583

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -1,6 +1,7 @@
 Changes in Release 1.2.0
 =============================================
 * [JOWS-8] - Allow a filter to be attached to a Resource
+* Add new constructor to filesystem-related resource provider that can take file: URIs
 
 Changes in Release 1.1.0
 =============================================
