Forgot to update release notes
git-svn-id: https://svn.shibboleth.net/java-openws/branches/REL_1@276 68e08561-3e15-0410-b96d-d18bf8373583

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -3,6 +3,7 @@ Changes in Release 1.2.0
 * [JOWS-8] - Allow a filter to be attached to a Resource
 * [JOWS-9] - SOAP Fault elements faultcode, faultstring, faultactor and detail shouldn't be prefixed
 * [JOWS-10] - Add constructor to filesystem-related resource providers that take a URL to the file.
+* [JOWS-11] -  ExpiringObjectStorageServiceSweeper does not continuously executes
 
 Changes in Release 1.1.0
 =============================================
