--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -1,3 +1,8 @@
+Changes in Release 1.2.2
+==============================================
+* Minor memory usage enhancements
+* Pick up latest version of xmltooling
+
 Changes in Release 1.2.1
 ==============================================
 [JOWS-14] Cleanup StorageService related classes
