--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -1,3 +1,7 @@
+Changes in Release 1.3.0
+==============================================
+[JOWS-6] - Implement SOAP client
+
 Changes in Release 1.2.2
 ==============================================
 * Minor memory usage enhancements
