--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -1,3 +1,8 @@
+Changes in Release 1.4.0
+==============================================
+* New object provider support for WS-Trust 1.3 specification
+* New object provider support for WS-Policy specification
+
 Changes in Release 1.3.1
 ==============================================
 [JOWS-17] - PropertyReplacementResourceFilter - avoid ClassCast exception due to empty properties file 
