JOWS-15: AbstractDateTimeType does not handle all datetime formats
git-svn-id: https://svn.shibboleth.net/java-openws/branches/REL_1@376 68e08561-3e15-0410-b96d-d18bf8373583

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -1,5 +1,6 @@
 Changes in Release 1.4.0
 ==============================================
+[JOWS-15] - AbstractDateTimeType does not handle all datetime formats
 * New object provider support for WS-Trust 1.3 specification
 * New object provider support for WS-Policy specification
 
