--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -1,3 +1,7 @@
+Changes in Release 1.4.1
+==============================================
+[JOWS-23] - Update libs for 1.4.1
+
 Changes in Release 1.4.0
 ==============================================
 [JOWS-15] - AbstractDateTimeType does not handle all datetime formats
@@ -14,7 +18,6 @@ Changes in Release 1.3.0
 ==============================================
 [JOWS-6] - Implement SOAP client
 [JOWS-16] -  Update libs for 1.3.0 release
-
 
 * New object provider support for WS-Security specification
 * New object provider support for WS-Addressing specification
@@ -42,7 +45,6 @@ Changes in Release 1.2.0
 [JOWS-11] - ExpiringObjectStorageServiceSweeper does not continuously executes
 [JOWS-12] - Add version information in library JAR manifest and provide command line tool to view it
 [JOWS-13] - HttpResource is incorrectly handling HTTP Last-Modified header in getLastModifiedTime()
-
 
 Changes in Release 1.1.0
 =============================================
