catch exception that might cause storage service sweeper to die - JOWS-24
git-svn-id: https://svn.shibboleth.net/java-openws/branches/REL_1@389 68e08561-3e15-0410-b96d-d18bf8373583

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -1,6 +1,7 @@
 Changes in Release 1.4.1
 ==============================================
 [JOWS-23] - Update libs for 1.4.1
+[JOWS-24] - StorageServiceSweeper can throw exception, causing the entire TaskTimer to die
 
 Changes in Release 1.4.0
 ==============================================
