--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -1,3 +1,7 @@
+Changes in Release X.X.X
+==============================================
+[JOWS-26] - KeyIdentifierMarshaller uses an incorrect attribute name
+
 Changes in Release 1.4.1
 ==============================================
 [JOWS-23] - Update libs for 1.4.1
