JOWS-27: Fix NPE in message logging and enhance sanity checks.
git-svn-id: https://svn.shibboleth.net/java-openws/branches/REL_1@393 68e08561-3e15-0410-b96d-d18bf8373583

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -1,6 +1,7 @@
-Changes in Release X.X.X
+Changes in Release 1.4.2
 ==============================================
 [JOWS-26] - KeyIdentifierMarshaller uses an incorrect attribute name
+[JOWS-27] - BaseMessageDecoder logging of protocol messages assumes a DOM
 
 Changes in Release 1.4.1
 ==============================================
