JOWS-28: SOAP11Encoder doesn't encode original SOAP message
git-svn-id: https://svn.shibboleth.net/java-openws/branches/REL_1@400 68e08561-3e15-0410-b96d-d18bf8373583

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -2,6 +2,7 @@ Changes in Release 1.4.2
 ==============================================
 [JOWS-26] - KeyIdentifierMarshaller uses an incorrect attribute name
 [JOWS-27] - BaseMessageDecoder logging of protocol messages assumes a DOM
+[JOWS-28] - SOAP11Encoder doesn't encode original SOAP message
 [JOWS-29] - Some pom changes for OpenWS
 [JOWS-30] - Update POM for Shib.net Repo and attach generated Javadocs
 
