--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -1,3 +1,7 @@
+Changes in Release 1.4.3
+==============================================
+[JOWS-32] - Inconsitency in getStatusCode result in HttpServletRequestAdapter
+
 Changes in Release 1.4.2
 ==============================================
 [JOWS-26] - KeyIdentifierMarshaller uses an incorrect attribute name
