--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -1,3 +1,8 @@
+Changes in Release 1.4.4
+==============================================
+[JOWS-33] - HttpResource does not properly release HTTP connnections
+[JOWS-34] - Update xmltooling library
+
 Changes in Release 1.4.3
 ==============================================
 [JOWS-31] - Failed test on Windows: testGetLocation(org.opensaml.util.resource.FilesystemResourceTest): expected:</...> but was:<C:\...>
