update slf4j - JOWS-34 prevent some other libraries from major updates pulled in via java-parent project remove maven plugin version, that now comes from java-parent project
git-svn-id: https://svn.shibboleth.net/java-openws/branches/REL_1@426 68e08561-3e15-0410-b96d-d18bf8373583

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -1,7 +1,7 @@
 Changes in Release 1.4.4
 ==============================================
 [JOWS-33] - HttpResource does not properly release HTTP connnections
-[JOWS-34] - Update xmltooling library
+[JOWS-34] - Update dependencies
 
 Changes in Release 1.4.3
 ==============================================
