Clean up assembly descriptor - JOWS-35 update links in README
git-svn-id: https://svn.shibboleth.net/java-openws/branches/REL_1@427 68e08561-3e15-0410-b96d-d18bf8373583

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -2,6 +2,7 @@ Changes in Release 1.4.4
 ==============================================
 [JOWS-33] - HttpResource does not properly release HTTP connnections
 [JOWS-34] - Update dependencies
+[JOWS-35] - Clean up maven assembly description
 
 Changes in Release 1.4.3
 ==============================================
