--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -1,3 +1,7 @@
+Changes in Release 1.4.5
+==============================================
+[JOWS-36] - WS-Trust OnBehalfOf provider is misimplemented, should support a sequence of wildcard children rather than a single child.
+
 Changes in Release 1.4.4
 ==============================================
 [JOWS-33] - HttpResource does not properly release HTTP connnections
