JOWS-37: FileBackedHttpResource does not properly read backup file, during initialization, if remote file is unreachable. Also add some logging for all cases where HTTP resource is inaccessible and fall back to backing file.
git-svn-id: https://svn.shibboleth.net/java-openws/branches/REL_1@434 68e08561-3e15-0410-b96d-d18bf8373583

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -1,6 +1,7 @@
 Changes in Release 1.4.5
 ==============================================
 [JOWS-36] - WS-Trust OnBehalfOf provider is misimplemented, should support a sequence of wildcard children rather than a single child.
+[JOWS-37] - FileBackedHttpResource does not properly read backup file, during initialization, if remote file is unreachable
 
 Changes in Release 1.4.4
 ==============================================
