Update release notes to match what is in Jira
git-svn-id: https://svn.shibboleth.net/java-openws/branches/REL_1@451 68e08561-3e15-0410-b96d-d18bf8373583

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -1,7 +1,8 @@
-Changes in Release 1.4.5
+Changes in Release 1.5.0
 ==============================================
 [JOWS-36] - WS-Trust OnBehalfOf provider is misimplemented, should support a sequence of wildcard children rather than a single child.
 [JOWS-37] - FileBackedHttpResource does not properly read backup file, during initialization, if remote file is unreachable
+[JOWS-39] - HTTPS scheme in FileBackedHTTPMetadataProvider does not perform hostname verification
 
 Changes in Release 1.4.4
 ==============================================
