--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -1,3 +1,8 @@
+Changes in Release 1.5.1
+==============================================
+Updating POM to implement:
+[JXT-106] - Update Apache Santuario (xmlsec) to 1.5.6
+
 Changes in Release 1.5.0
 ==============================================
 [JOWS-36] - WS-Trust OnBehalfOf provider is misimplemented, should support a sequence of wildcard children rather than a single child.
