--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -1,5 +1,9 @@
 Changes in Release 1.5.1
 ==============================================
+[JOWS-40] - CancelTargetImpl setUnknownXMLObject method doesn't correctly process argument 
+
+Changes in Release 1.5.1
+==============================================
 Updating POM to implement:
 [JXT-106] - Update Apache Santuario (xmlsec) to 1.5.6
 
